examples/test/testpolicy3077.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3077
  namespace: namespace352
spec:
  podSelector:
    matchLabels:
      key22: value6
      key13: value21
      key17: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value10
          key28: value33
          key1: value23
      podSelector:
        matchLabels:
          key8: value25
          key12: value20
          key27: value10
